--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="info">App Info</string>
     <string name="settings">Settings</string>
     <string name="logout">Logout</string>
+    <string name="open_nav">Open Navigation Drawer</string>
+    <string name="close_nav">Close Navigation Drawer</string>
 
     <string name="scanBag">Scan Bag tag Here</string>
     <string name="scanRoom">Scan Room</string>
